--- a/classification/assignment_1/asm_1_cai_tien_mo_hinh.ipynb
+++ b/classification/assignment_1/asm_1_cai_tien_mo_hinh.ipynb
@@ -2452,7 +2452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -2466,12 +2466,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7636056f1e4d8fdf67bea993a39219552fd16254f6bf1d4cfd5ce8af047e9af1"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
