--- a/feature-selection-for-machine-learning/11-Hybrid-methods/11.1-Feature-shuffling.ipynb
+++ b/feature-selection-for-machine-learning/11-Hybrid-methods/11.1-Feature-shuffling.ipynb
@@ -24,6 +24,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1160,9 +1165,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1174,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -1188,6 +1193,11 @@
    "toc_position": {},
    "toc_section_display": "block",
    "toc_window_display": true
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
