--- a/feature-selection-for-machine-learning/05-Filter-Statistical-Tests/05.4-Basic-methods-plus-statistical-pipeline.ipynb
+++ b/feature-selection-for-machine-learning/05-Filter-Statistical-Tests/05.4-Basic-methods-plus-statistical-pipeline.ipynb
@@ -746,7 +746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -760,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -777,7 +777,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "7636056f1e4d8fdf67bea993a39219552fd16254f6bf1d4cfd5ce8af047e9af1"
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
    }
   }
  },
