--- a/machine-learning-imbalanced-data/Section-03-Metrics/03-04-Balanced-Accuracy.ipynb
+++ b/machine-learning-imbalanced-data/Section-03-Metrics/03-04-Balanced-Accuracy.ipynb
@@ -507,9 +507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "imbalanced",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
-   "name": "imbalanced"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -521,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.13"
   },
   "toc": {
    "base_numbering": 1,
@@ -535,6 +535,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
+   }
   }
  },
  "nbformat": 4,
