--- a/classification/assignment_2/adv_asm2.ipynb
+++ b/classification/assignment_2/adv_asm2.ipynb
@@ -39,7 +39,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
-    "\n",
     "warnings.filterwarnings('ignore')\n",
     "%matplotlib inline"
    ]
@@ -1258,7 +1257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('sklearn-env')",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -1272,12 +1271,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8e5e2e4be1ebd907a801c68ebfc07d1a6416a7e697e27568b05a2a0dea334337"
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
    }
   }
  },
