--- a/classification/assignment_1/asm_1_advance.ipynb
+++ b/classification/assignment_1/asm_1_advance.ipynb
@@ -5127,7 +5127,7 @@
     "    'base_score': [0.2, 0.5, 1]\n",
     "}\n",
     "\n",
-    "gs2 = GridSearchCV(XGBClassifier(n_jobs=-1), params, n_jobs=-1, cv=KFold(n_splits=3), scoring='roc_auc')\n",
+    "gs2 = GridSearchCV(XGBClassifier(n_jobs=4), params, n_jobs=4, cv=KFold(n_splits=3), scoring='roc_auc')\n",
     "gs2.fit(X_train, y_train)\n",
     "\n",
     "print('Best score:', gs2.best_score_)\n",
@@ -5144,7 +5144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('sklearn-env')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -5158,12 +5158,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c87f099090e5c01750886554cedd7d26709d6a76287ed0b15d90060d9152c8a4"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
