--- a/ml-deeplearning/Lab_1_TensorFlow_cơ_bản.ipynb
+++ b/ml-deeplearning/Lab_1_TensorFlow_cơ_bản.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,11 +84,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2.7.0\n"
+            "2.10.0\n"
           ]
         }
       ],
       "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "%matplotlib inline\n",
+        "\n",
         "# Import TensorFlow\n",
         "import tensorflow as tf\n",
         "print(tf.__version__) # tìm số phiên bản (nên là 2.x+)"
@@ -111,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -121,12 +125,20 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-09-20 13:34:12.667852: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+            "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "<tf.Tensor: shape=(), dtype=int32, numpy=7>"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -150,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +177,7 @@
               "0"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 17,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -177,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -189,10 +201,10 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([10, 10], dtype=int32)>"
+              "<tf.Tensor: id=16, shape=(2,), dtype=int32, numpy=array([10, 10], dtype=int32)>"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -205,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,7 +232,7 @@
               "1"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 19,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -232,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -244,12 +256,12 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(2, 2), dtype=int32, numpy=\n",
+              "<tf.Tensor: id=17, shape=(2, 2), dtype=int32, numpy=\n",
               "array([[10,  7],\n",
               "       [ 7, 10]], dtype=int32)>"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 20,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -263,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -278,7 +290,7 @@
               "2"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -300,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -312,13 +324,13 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(3, 2), dtype=float16, numpy=\n",
+              "<tf.Tensor: id=18, shape=(3, 2), dtype=float16, numpy=\n",
               "array([[10.,  7.],\n",
               "       [ 3.,  2.],\n",
               "       [ 8.,  9.]], dtype=float16)>"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 22,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -333,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -348,7 +360,7 @@
               "2"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -360,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -372,7 +384,7 @@
         {
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(3, 2, 3), dtype=int32, numpy=\n",
+              "<tf.Tensor: id=19, shape=(3, 2, 3), dtype=int32, numpy=\n",
               "array([[[ 1,  2,  3],\n",
               "        [ 4,  5,  6]],\n",
               "\n",
@@ -383,7 +395,7 @@
               "        [16, 17, 18]]], dtype=int32)>"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -401,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -416,7 +428,7 @@
               "3"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -468,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -481,10 +493,10 @@
           "data": {
             "text/plain": [
               "(<tf.Variable 'Variable:0' shape=(2,) dtype=int32, numpy=array([10,  7], dtype=int32)>,\n",
-              " <tf.Tensor: shape=(2,), dtype=int32, numpy=array([10,  7], dtype=int32)>)"
+              " <tf.Tensor: id=27, shape=(2,), dtype=int32, numpy=array([10,  7], dtype=int32)>)"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -507,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -519,12 +531,12 @@
       "outputs": [
         {
           "ename": "TypeError",
-          "evalue": "ignored",
+          "evalue": "'ResourceVariable' object does not support item assignment",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-f4d72d5027ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Sẽ có lỗi (yêu cầu phương thức .assign())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/var/folders/fp/5xq11g_j5cxdj56j6vcq_3n00000gn/T/ipykernel_3859/369646658.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Sẽ có lỗi (yêu cầu phương thức .assign())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mchangeable_tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: 'ResourceVariable' object does not support item assignment"
           ]
         }
@@ -648,7 +660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -658,25 +670,15 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "(<tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
-              " array([[-0.7565803 , -0.06854702],\n",
-              "        [ 0.07595026, -1.2573844 ],\n",
-              "        [-0.23193765, -1.8107855 ]], dtype=float32)>,\n",
-              " <tf.Tensor: shape=(3, 2), dtype=float32, numpy=\n",
-              " array([[-0.7565803 , -0.06854702],\n",
-              "        [ 0.07595026, -1.2573844 ],\n",
-              "        [-0.23193765, -1.8107855 ]], dtype=float32)>,\n",
-              " <tf.Tensor: shape=(3, 2), dtype=bool, numpy=\n",
-              " array([[ True,  True],\n",
-              "        [ True,  True],\n",
-              "        [ True,  True]])>)"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "AttributeError",
+          "evalue": "module 'tensorflow_core._api.v2.random' has no attribute 'Generator'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/fp/5xq11g_j5cxdj56j6vcq_3n00000gn/T/ipykernel_3859/369976614.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Tạo 2 random tensor (nhưng tương tự nhau)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mrandom_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGenerator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# thiết lập seed cho khả năng tái tạo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mrandom_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# tạo tensor từ phân phối chuẩn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrandom_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGenerator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mrandom_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow_core._api.v2.random' has no attribute 'Generator'"
+          ]
         }
       ],
       "source": [
@@ -3567,7 +3569,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.7.13 ('tensorflow_env')",
+      "display_name": "Python 3.7.13 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -3585,7 +3587,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "a9571831080ecca8d45100f881e7d57dcb8212058231d431271867de7a28391a"
+        "hash": "c922f6e6419787d491495b8843edb68cd95f680a8b11a4d080a9acd5e0a4e6c8"
       }
     }
   },
