--- a/computer-vision-with-python/01-Image-Basics-with-OpenCV/00-Opening-Image-Files-in-a-Notebook.ipynb
+++ b/computer-vision-with-python/01-Image-Basics-with-OpenCV/00-Opening-Image-Files-in-a-Notebook.ipynb
@@ -32,7 +32,10 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -62,7 +65,10 @@
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -317,7 +323,10 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -367,7 +376,10 @@
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -379,7 +391,10 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -651,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -665,9 +680,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
