--- a/computer-vision-with-python/01-Image-Basics-with-OpenCV/01-Opening-Images-with-OpenCV.ipynb
+++ b/computer-vision-with-python/01-Image-Basics-with-OpenCV/01-Opening-Images-with-OpenCV.ipynb
@@ -40,7 +40,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +54,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d4769b5f4808649e9f6efc2edf9fbe2018aef5c0a679de8e6bc3eb348403e35b"
+   }
   }
  },
  "nbformat": 4,
