--- a/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
@@ -61,24 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tesla PROPN nsubj\n",
-      "is VERB aux\n",
-      "looking VERB ROOT\n",
-      "at ADP prep\n",
-      "buying VERB pcomp\n",
-      "U.S. PROPN compound\n",
-      "startup NOUN dobj\n",
-      "for ADP prep\n",
-      "$ SYM quantmod\n",
-      "6 NUM compound\n",
-      "million NUM pobj\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('nlp')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n nlp ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -634,7 +627,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -648,7 +641,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+   }
   }
  },
  "nbformat": 4,
