--- a/ml-deeplearning/spacy-basic.ipynb
+++ b/ml-deeplearning/spacy-basic.ipynb
@@ -24,12 +24,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = nlp(u'Tesla is looking at buying U.S. startup for $6 million')"
+    "doc = nlp(u'Tesla is looking at buying U.S. startup for $6 million') # u is for unicode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,117 @@
    "source": [
     "# pos: part of speech (từ loại)\n",
     "# dep: syntactic dependency (cú pháp phụ thuộc)\n",
-    "for tock in doc:\n",
-    "    print(tock.text, tock.pos_, tock.dep_)"
+    "for tocken in doc:\n",
+    "    print(tocken.text, tocken.pos_, tocken.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x7f9de3a2fc40>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x7f9de3a2f580>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x7f9de3941770>),\n",
+       " ('attribute_ruler',\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x7f9de3c99040>),\n",
+       " ('lemmatizer',\n",
+       "  <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x7f9de3c4c780>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x7f9de39419a0>)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ner: named entity recognizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc2 = nlp(u\"Tesla isn't   looking into startups anymore.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla PROPN nsubj\n",
+      "is AUX aux\n",
+      "n't PART neg\n",
+      "   SPACE dep\n",
+      "looking VERB ROOT\n",
+      "into ADP prep\n",
+      "startups NOUN pobj\n",
+      "anymore ADV advmod\n",
+      ". PUNCT punct\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc2:\n",
+    "    print(token.text, token.pos_, token.dep_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PROPN'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc2[0].pos_"
    ]
   },
   {
