--- a/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
@@ -61,17 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('nlp')' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n nlp ipykernel --update-deps --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla PROPN nsubj\n",
+      "is AUX aux\n",
+      "looking VERB ROOT\n",
+      "at ADP prep\n",
+      "buying VERB pcomp\n",
+      "U.S. PROPN compound\n",
+      "startup NOUN dobj\n",
+      "for ADP prep\n",
+      "$ SYM quantmod\n",
+      "6 NUM compound\n",
+      "million NUM pobj\n"
      ]
     }
    ],
@@ -140,9 +147,14 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.Tagger at 0x237cb1e8f98>),\n",
-       " ('parser', <spacy.pipeline.DependencyParser at 0x237cb2852b0>),\n",
-       " ('ner', <spacy.pipeline.EntityRecognizer at 0x237cb285360>)]"
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x7fc60693f700>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x7fc60693f520>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x7fc606859540>),\n",
+       " ('attribute_ruler',\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x7fc6051e7d40>),\n",
+       " ('lemmatizer',\n",
+       "  <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x7fc606bd9b00>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x7fc606859770>)]"
       ]
      },
      "execution_count": 2,
@@ -162,7 +174,7 @@
     {
      "data": {
       "text/plain": [
-       "['tagger', 'parser', 'ner']"
+       "['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner']"
       ]
      },
      "execution_count": 3,
@@ -180,7 +192,10 @@
    "source": [
     "___\n",
     "## Tokenization\n",
-    "The first step in processing text is to split up all the component parts (words & punctuation) into \"tokens\". These tokens are annotated inside the Doc object to contain descriptive information. We'll go into much more detail on tokenization in an upcoming lecture. For now, let's look at another example:"
+    "The first step in processing text is to split up all the component parts (words & punctuation) into \"tokens\". These tokens are annotated inside the Doc object to contain descriptive information. We'll go into much more detail on tokenization in an upcoming lecture. For now, let's look at another example:\n",
+    "\n",
+    "Bước đầu tiên của xử lý text là tách chúng ra thành các phần (từ & dấu chấm câu) ra thành các \"tokens\". Các token này bên trong Doc object đều có mô tả cụ thể.\n",
+    "Chúng ta sẽ đi vào chi tiết ở các bài sau, bây giờ chúng ta hãy cùng xem xét một ví dụ khác"
    ]
   },
   {
@@ -193,9 +208,9 @@
      "output_type": "stream",
      "text": [
       "Tesla PROPN nsubj\n",
-      "is VERB aux\n",
-      "n't ADV neg\n",
-      "   SPACE \n",
+      "is AUX aux\n",
+      "n't PART neg\n",
+      "   SPACE dep\n",
       "looking VERB ROOT\n",
       "into ADP prep\n",
       "startups NOUN pobj\n",
@@ -288,7 +303,11 @@
     "## Part-of-Speech Tagging (POS)\n",
     "The next step after splitting the text up into tokens is to assign parts of speech. In the above example, `Tesla` was recognized to be a ***proper noun***. Here some statistical modeling is required. For example, words that follow \"the\" are typically nouns.\n",
     "\n",
-    "For a full list of POS Tags visit https://spacy.io/api/annotation#pos-tagging"
+    "For a full list of POS Tags visit https://spacy.io/api/annotation#pos-tagging\n",
+    "\n",
+    "Sau khi tách câu ra thành các tokens. Bước tiếp theo là gán cho nó một POS - Parts of speech (Từ loại)\n",
+    "Tesla được nhận ra là một danh từ riêng.\n",
+    " "
    ]
   },
   {
@@ -317,7 +336,7 @@
    "source": [
     "___\n",
     "## Dependencies\n",
-    "We also looked at the syntactic dependencies assigned to each token. `Tesla` is identified as an `nsubj` or the ***nominal subject*** of the sentence.\n",
+    "We also looked at the syntactic dependencies (cú pháp phụ thuộc) assigned to each token. `Tesla` is identified as an `nsubj` or the ***nominal subject*** of the sentence.\n",
     "\n",
     "For a full list of Syntactic Dependencies visit https://spacy.io/api/annotation#dependency-parsing\n",
     "<br>A good explanation of typed dependencies can be found [here](https://nlp.stanford.edu/software/dependencies_manual.pdf)"
@@ -325,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +353,7 @@
        "'nsubj'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,25 +535,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Life is what happens to us while we are making other plans\"\n"
+      "Beautiful Boy\", the phrase \"Life is what happens to us while we are making other plans\"\n"
      ]
     }
    ],
    "source": [
-    "life_quote = doc3[16:30]\n",
+    "life_quote = doc3[10:30]\n",
     "print(life_quote)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +562,7 @@
        "spacy.tokens.span.Span"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +627,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,6 +642,11 @@
    "source": [
     "## Next up: Tokenization"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -641,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
