--- a/nlp-with-python/01-NLP-Python-Basics/04-Stop-Words.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/04-Stop-Words.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'hers', 'show', 'though', 'various', 'sixty', 'say', 'quite', 'ten', 'anything', 'although', 'hereby', 'in', 'ours', 'herself', 'among', 'unless', 'and', 'whole', 'anywhere', 'latter', 'therein', 'whereafter', 'that', 'one', 'whose', 'either', 'within', 'eight', 'three', 'latterly', 'anyone', 'a', 'less', 'former', 'been', 'same', 'anyway', 'else', 'cannot', 'five', 'i', 'until', 'last', 'thus', 'give', 'move', 'thereafter', 'via', 'than', 'empty', 'off', 'neither', 'too', 'please', 'over', 'just', 'otherwise', 'has', 'her', 'put', 'its', 'whether', 'herein', 'myself', 'me', 'nevertheless', 'whatever', 'someone', 'towards', 'whereby', 'onto', 'sometimes', 'thence', 'them', 'done', 'at', 'back', 'nor', 'another', 'behind', 'together', 'take', 'amongst', 'being', 'seemed', 'seeming', 'fifteen', 'do', 'further', 'something', 'again', 'this', 'were', 'wherein', 'how', 'up', 'must', 'get', 'whereas', 'much', 'upon', 'yet', 'both', 'many', 'very', 'may', 'after', 'regarding', 'full', 'through', 'below', 'his', 'well', 'everything', 'so', 'our', 'should', 'seem', 'while', 'for', 'might', 'mine', 'when', 'with', 'you', 'few', 'never', 'because', 'own', 'also', 'due', 'hence', 'it', 'more', 'their', 'such', 'becomes', 'first', 'hereupon', 'since', 'third', 'twenty', 'who', 'she', 'nobody', 'name', 'really', 'enough', 'least', 'two', 'whoever', 'which', 'yours', 'moreover', 'seems', 'before', 'therefore', 'then', 'used', 'even', 'nowhere', 'without', 'other', 'around', 'made', 'hundred', 'no', 'twelve', 'several', 'your', 'meanwhile', 'per', 'except', 'yourselves', 'why', 'some', 'not', 'yourself', 'sometime', 'somehow', 'become', 'beyond', 'almost', 'will', 'somewhere', 'the', 'everyone', 'about', 'everywhere', 'anyhow', 'side', 'next', 'fifty', 'they', 'most', 'perhaps', 'across', 'themselves', 'besides', 'against', 'can', 'him', 'there', 'noone', 'under', 'formerly', 'already', 'all', 'if', 'my', 'or', 'serious', 'four', 'thereupon', 'whence', 'here', 'whither', 'beside', 'wherever', 'to', 'himself', 'between', 'ourselves', 'none', 'on', 'became', 'an', 'have', 'part', 'did', 'had', 'each', 'six', 'those', 'from', 'whenever', 'any', 'am', 'would', 'make', 'could', 'does', 'go', 'call', 'indeed', 'these', 'often', 'above', 'during', 'by', 'nine', 'thereby', 'others', 'afterwards', 'throughout', 'whom', 'amount', 'as', 'hereafter', 'top', 'mostly', 'us', 'whereupon', 'once', 'only', 'still', 'namely', 'forty', 'ca', 'along', 'be', 'itself', 'where', 'see', 'into', 'toward', 'but', 'is', 'keep', 'bottom', 'ever', 'becoming', 'every', 'always', 'front', 'nothing', 'we', 'of', 'out', 'eleven', 'alone', 'he', 'however', 'rather', 'down', 'thru', 'now', 'using', 'are', 'doing', 'what', 'beforehand', 're', 'was', 'elsewhere'}\n"
+      "{'btw', 'whereas', 'after', 'themselves', 'everything', 'get', 'had', 'very', 'did', '’d', 'throughout', 'and', 'front', 'yourself', 'or', 'that', 'whence', 'do', 'wherein', '‘ve', 'others', 'also', 'afterwards', 'nowhere', 'whither', 'may', 'where', 'does', 'here', 'still', 'whereupon', 'sometimes', 'anyone', 'bottom', 'than', 'those', \"'ll\", 'anyhow', 'the', 'herself', 'next', 'further', 'latterly', 'into', 'hence', '‘s', '‘d', 'from', 'seem', 'cannot', 'how', 'thru', '‘re', 'fifteen', 'his', 'many', 'hereafter', 'out', \"'re\", 'amongst', 'anything', 'often', \"'m\", 'go', 'down', 'him', 'toward', 'us', 'ourselves', 'in', 'now', 'enough', 'thereby', 'formerly', 'just', 'was', 'but', 'noone', 'against', 'you', 'various', 'seemed', \"n't\", 'therein', 'put', 'anywhere', 'third', 'anyway', 'six', 'same', 'give', 'during', 'take', 'nine', 'used', 'whether', 'would', 'a', 'meanwhile', 'being', '’ve', 'something', 'either', 'have', 'within', 'three', 'by', 'whatever', 'has', 'twenty', 'indeed', 'what', 'five', 'them', 'n‘t', 'everywhere', 'former', 'can', 'becomes', 'moreover', \"'ve\", 'n’t', 'four', 'else', 'upon', 'so', 'were', 'why', 'besides', 'everyone', 'however', 'beforehand', 'around', 'who', 'together', 'among', 'whenever', 'therefore', 'once', 'full', 'though', 'empty', 'been', 'two', 'using', 'at', 'he', 'below', 'might', 'through', 'any', 'under', 'hereby', 'am', 'my', 'first', 'will', 'yourselves', 'except', 'on', 'rather', 'seems', 'please', 'neither', 'least', 'must', 'eight', 'we', 'quite', 'really', 'whereby', 'become', 'seeming', 'hers', 'for', 'alone', 'ours', 'make', 'before', 'thus', 'already', 'own', 'along', 'part', 'thence', 'per', 'whole', 'doing', 'up', 'its', 'which', 'see', 'be', 'across', 'these', '‘ll', 'without', 'not', 'an', 'namely', 'while', 'myself', 'twelve', 'again', 'almost', 'hundred', 'yours', 'ten', 'made', 'sometime', 'few', 'somehow', 'sixty', \"'d\", 'keep', 'nobody', 'such', 'none', 'since', 'eleven', 'hereupon', 'towards', 'onto', 'other', 'fifty', 'wherever', 'ever', 'about', 'otherwise', 'back', 'every', 'it', 'beside', 'name', 'someone', 'herein', 'latter', 'of', 'only', 'whoever', 'could', 'as', 'her', '‘m', 'nothing', 'somewhere', 'behind', 'always', 'whose', 'even', 'whereafter', 'between', 'perhaps', 'several', 'some', 'nor', 'regarding', 'me', 'less', 'mostly', 'forty', 'if', 'is', 'both', 'i', 'each', 'say', 'amount', 'call', 'no', 'over', 'mine', 'side', 'serious', 'himself', 'thereupon', 'off', 'unless', 'above', 'due', 'move', '’re', \"'s\", 'becoming', 'via', 'whom', 'well', 'are', 'another', 'then', 're', 'top', 'never', 'became', 'more', 'ca', 'to', 'when', 'there', 'nevertheless', 'too', 'much', '’ll', '’m', 'one', 'our', 'should', 'until', 'with', '’s', 'itself', 'although', 'thereafter', 'she', 'because', 'all', 'their', 'show', 'most', 'this', 'elsewhere', 'your', 'they', 'yet', 'done', 'last'}\n"
      ]
     }
    ],
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "305"
+       "326"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "306"
+       "327"
       ]
      },
      "execution_count": 7,
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "305"
+       "326"
       ]
      },
      "execution_count": 10,
@@ -254,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +268,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+   }
   }
  },
  "nbformat": 4,
