--- a/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb
@@ -65,7 +65,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/ngothai/Documents/ml-labs/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ngothai/Documents/ml-labs/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb#X10sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Import the toolkit and the full Porter Stemmer library\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ngothai/Documents/ml-labs/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb#X10sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnltk\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ngothai/Documents/ml-labs/nlp-with-python/01-NLP-Python-Basics/02-Stemming.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnltk\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstem\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mporter\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     ]
+    }
+   ],
    "source": [
     "# Import the toolkit and the full Porter Stemmer library\n",
     "import nltk\n",
@@ -295,7 +307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +321,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+   }
   }
  },
  "nbformat": 4,
