--- a/nlp-with-python/01-NLP-Python-Basics/05-Vocabulary-and-Matching.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/05-Vocabulary-and-Matching.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +62,25 @@
    "metadata": {},
    "source": [
     "### Creating patterns\n",
-    "In literature, the phrase 'solar power' might appear as one word or two, with or without a hyphen. In this section we'll develop a matcher named 'SolarPower' that finds all three:"
+    "In literature, the phrase 'solar power' might appear as one word or two, with or without a hyphen. In this section we'll develop a matcher named 'SolarPower' that finds all three:\n",
+    "\n",
+    "Trong văn học, cụm từ 'năng lượng mặt trời' có thể xuất hiện dưới dạng 1 từ hoặc có dấu gạch ngang.\n",
+    "Trong phần này sẽ phát triển một matcher có tên là solarpower để tìm tất cả chúng."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def on_match(matcher, doc, i, matches):\n",
+    "    print('Matched!', matches)\n",
+    "    \n",
     "pattern1 = [{'LOWER': 'solarpower'}]\n",
     "pattern2 = [{'LOWER': 'solar'}, {'LOWER': 'power'}]\n",
     "pattern3 = [{'LOWER': 'solar'}, {'IS_PUNCT': True}, {'LOWER': 'power'}]\n",
-    "\n",
-    "matcher.add('SolarPower', None, pattern1, pattern2, pattern3)"
+    "matcher.add('SolarPower',[pattern1, pattern2, pattern3], on_match=on_match)"
    ]
   },
   {
@@ -100,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Matched! [(8656102463236116519, 1, 3), (8656102463236116519, 10, 11), (8656102463236116519, 13, 16)]\n",
+      "Matched! [(8656102463236116519, 1, 3), (8656102463236116519, 10, 11), (8656102463236116519, 13, 16)]\n",
+      "Matched! [(8656102463236116519, 1, 3), (8656102463236116519, 10, 11), (8656102463236116519, 13, 16)]\n",
       "[(8656102463236116519, 1, 3), (8656102463236116519, 10, 11), (8656102463236116519, 13, 16)]\n"
      ]
     }
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,12 +192,12 @@
     "matcher.remove('SolarPower')\n",
     "\n",
     "# Add the new set of patterns to the 'SolarPower' matcher:\n",
-    "matcher.add('SolarPower', None, pattern1, pattern2)"
+    "matcher.add('SolarPower', [pattern1, pattern2], on_match=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,21 +250,21 @@
     "matcher.remove('SolarPower')\n",
     "\n",
     "# Add the new set of patterns to the 'SolarPower' matcher:\n",
-    "matcher.add('SolarPower', None, pattern1, pattern2)"
+    "matcher.add('SolarPower',[pattern1, pattern2], on_match=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc2 = nlp(u'Solar-powered energy runs solar-powered cars.')"
+    "doc2 = nlp(u'Solar-powered energy runs solarpowered cars.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,19 +302,19 @@
     "matcher.remove('SolarPower')\n",
     "\n",
     "# Add the new set of patterns to the 'SolarPower' matcher:\n",
-    "matcher.add('SolarPower', None, pattern1, pattern2, pattern3, pattern4)"
+    "matcher.add('SolarPower', [pattern1, pattern2, pattern3, pattern4], on_match=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(8656102463236116519, 0, 3), (8656102463236116519, 5, 8)]\n"
+      "[(8656102463236116519, 0, 3), (8656102463236116519, 5, 6)]\n"
      ]
     }
    ],
@@ -323,13 +331,13 @@
     "Besides lemmas, there are a variety of token attributes we can use to determine matching rules:\n",
     "<table><tr><th>Attribute</th><th>Description</th></tr>\n",
     "\n",
-    "<tr ><td><span >`ORTH`</span></td><td>The exact verbatim text of a token</td></tr>\n",
+    "<tr ><td><span >`ORTH`</span></td><td>The exact  (nguyên văn) text of a token</td></tr>\n",
     "<tr ><td><span >`LOWER`</span></td><td>The lowercase form of the token text</td></tr>\n",
     "<tr ><td><span >`LENGTH`</span></td><td>The length of the token text</td></tr>\n",
     "<tr ><td><span >`IS_ALPHA`, `IS_ASCII`, `IS_DIGIT`</span></td><td>Token text consists of alphanumeric characters, ASCII characters, digits</td></tr>\n",
     "<tr ><td><span >`IS_LOWER`, `IS_UPPER`, `IS_TITLE`</span></td><td>Token text is in lowercase, uppercase, titlecase</td></tr>\n",
-    "<tr ><td><span >`IS_PUNCT`, `IS_SPACE`, `IS_STOP`</span></td><td>Token is punctuation, whitespace, stop word</td></tr>\n",
-    "<tr ><td><span >`LIKE_NUM`, `LIKE_URL`, `LIKE_EMAIL`</span></td><td>Token text resembles a number, URL, email</td></tr>\n",
+    "<tr ><td><span >`IS_PUNCT`, `IS_SPACE`, `IS_STOP`</span></td><td>Token is punctuation (dấu câu), whitespace, stop word</td></tr>\n",
+    "<tr ><td><span >`LIKE_NUM`, `LIKE_URL`, `LIKE_EMAIL`</span></td><td>Token text resembles (giống) a number, URL, email</td></tr>\n",
     "<tr ><td><span >`POS`, `TAG`, `DEP`, `LEMMA`, `SHAPE`</span></td><td>The token's simple and extended part-of-speech tag, dependency label, lemma, shape</td></tr>\n",
     "<tr ><td><span >`ENT_TYPE`</span></td><td>The token's entity label</td></tr>\n",
     "\n",
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,17 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../TextFiles/reaganomics.txt', encoding='utf8') as f:\n",
+    "with open('../TextFiles/reaganomics_mac.txt') as f:\n",
     "    doc3 = nlp(f.read())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -426,10 +434,10 @@
        " (3473369816841043438, 54, 56),\n",
        " (3473369816841043438, 61, 65),\n",
        " (3473369816841043438, 673, 677),\n",
-       " (3473369816841043438, 2985, 2989)]"
+       " (3473369816841043438, 2990, 2994)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +468,7 @@
        "Reaganomics (a portmanteau of [Ronald] Reagan and economics attributed to Paul Harvey)[1] refers to the economic policies promoted by U.S. President Ronald Reagan during the 1980s. These policies are commonly associated with supply-side economics, referred to as trickle-down economics or voodoo economics by political opponents, and free-market economics by political advocates.\n"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +496,7 @@
        "same time he attracted a following from the supply-side economics movement, which formed in opposition to Keynesian"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,16 +507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "against institutions.[66] His policies became widely known as \"trickle-down economics\", due to the significant"
+       "and similar organizations) lawsuits against institutions.[66] His policies became widely known as \"trickle-down economics\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +585,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -591,7 +599,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+   }
   }
  },
  "nbformat": 4,
