--- a/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
+++ b/nlp-with-python/01-NLP-Python-Basics/00-Spacy-Basics.ipynb
@@ -651,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('nlp')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -665,11 +665,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "eab2befb62af694730c981c1dc2e0805f7b79e7dc0c91b58059a91d3c19df925"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
